<resources>
    <string name="app_name">MobSoft</string>
    <string name="menu_main">Menu</string>
    <string name="profile_main">Profile</string>
    <string name="user_name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="food_list_title">Étel lista</string>
    <string name="allergene_list_title">Allergén lista</string>
    <string name="food_details_title">Étel adatai</string>
    <string name="ingredients">Hozzávalók</string>
</resources>
