<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.bme.iemqra.mobsoft.mobsoft.ui.main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_below="@id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/restaurant_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="16dp"
        android:layout_below="@id/restaurant_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="16dp"
        android:layout_below="@id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Force Crash!"
        android:onClick="forceCrash"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_fab"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_done_white_24"
        app:fabSize="normal"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
